<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/threading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/threads" />

    <Button
        android:id="@+id/raceCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/race_condition" />

    <Button
        android:id="@+id/deadlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deadlock" />

    <Button
        android:id="@+id/livelock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/livelock" />

</LinearLayout>